carousel preview products markup

--- a/index.html
+++ b/index.html
@@ -71,70 +71,67 @@
             <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0174.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTiron01.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Masážní válec černý</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1266.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTxin007.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Závěsný posilovací systém</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0175.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTstorm042.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Yoga mat 8 Black</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0198.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTxin006.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Dřevěné gymnastické kruhy</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0199.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTkref007.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Roller Dots 33cm Red</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1267.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTstorm144.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Competition Kettlebell 14kg</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0174.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTstorm143.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Competition Kettlebell 10kg</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0198.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTiron17.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred cable rope</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0199.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTiron18.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Heavy Jump Rope 470g black</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1266.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTiron01.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Painted Dumbbell Set 20 kg Black</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0175.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTiron14.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Suspension Training Strap red</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1267.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTstr31.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Stormred Yoga mat 8 Pink/blue</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
-                    
                 </div>
-
                 <div class="swiper-pagination"></div>
-
                 <div class="swiper-button-prev">
                     <svg xmlns="http://www.w3.org/2000/svg" width="26.791" height="26.791"
                         viewBox="0 0 26.791 26.791" class="swiper-button-img">
@@ -845,63 +842,63 @@
                 <h2 class="lpHdl--2">To nejlepší ze sportovní výživy</h2>
                 <div class="swiper-wrapper">
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0174.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTber0001.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Barebells Protein Lískový oříšek a nugát 55 g</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1266.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTsupl0715.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Extrifit Fatall Fat Burner 130 kapslí</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0175.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTgym035.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">GymBeam Protein Just Whey 2000 g, white...</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0198.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTnoc006.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">NOCCO BCAA Blood Orange Del Sol 330 ml</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0199.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTps0048.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">ALAVIS Maxima Triple Blend Extra Silný 700g</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1267.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTsupl0489.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Extrifit BCAA 1800 mg 2:1:1 150 tbl</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0174.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTber0001.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Barebells Protein Lískový oříšek a nugát 55 g</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0198.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTnut11381.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Nutrend 100% Whey Protein 1000 g, čokoláda...</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/PS/PSV0199.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTnut0264.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Nutrend Fat Direct, 60 kapslí</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1266.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla Dawn of…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTgym018.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">GymBeam Tribulus Terrestris 120 tbl</p>
                         <p class="swiper-product-price" data-prod-price="">949&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/XB/XBSE0175.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTsupl0469.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Extrifit Agrezz 20 x 20,8 g orange</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     <div class="swiper-slide" data-prod="" data-prod-url="">
-                        <img class="swiper-product-img loaded" data-prod-img="" src="https://cdn.alza.cz/Foto/f8/MS/MSX1267.jpg" alt="">
-                        <p class="swiper-product-name" data-prod-name="short-35">Assassins Creed Valhalla -…</p>
+                        <img class="swiper-product-img loaded" data-prod-img="" src="img/carousel-preview/SPTks134.jpg" alt="">
+                        <p class="swiper-product-name" data-prod-name="short-35">Bery Jones s příchutí slaného karamelu 250g</p>
                         <p class="swiper-product-price" data-prod-price="">1&nbsp;699&nbsp;Kč</p>
                     </div>
                     
